@@ -727,3 +727,5 @@ ZeroDivisionError: SeparableTransformation::eval_scalars yin interval is zero; c
 -- Martin's zoomhist bug
 
 -- restore robert leftwich's tutorial link to FAQ
+
+-- JPL and NIST screenshots...
