@@ -30,29 +30,29 @@ figure()
 
 subplot(2,2,1)
 
-levs1, colls = contourf(X, Y, Z, levels,
+cset1 = contourf(X, Y, Z, levels,
                         cmap=cm.jet,
                         )
 #If we want lines as well as filled regions, we need to call
 # contour separately; don't try to change the edgecolor or edgewidth
 # of the polygons in the collections returned by contourf.
 # Use levels output from previous call to guarantee they are the same.
-levs2, colls2 = contour(X, Y, Z, levs1,
+cset2 = contour(X, Y, Z, cset1.levels,
                         colors = 'k',
                         hold='on')
 # We don't really need dashed contour lines to indicate negative
 # regions, so let's turn them off.
-for c in colls2:
+for c in cset2.collections:
     c.set_linestyle('solid')
 
 # It is easier here to make a separate call to contour than
 # to set up an array of colors and linewidths.
 # We are making a thick green line as a zero contour.
 # Specify the zero level as a tuple with only 0 in it.
-levs3, colls3 = contour(X, Y, Z, (0,),
-                        colors = 'g',
-                        linewidths = 2,
-                        hold='on')
+cset3 = contour(X, Y, Z, (0,),
+                colors = 'g',
+                linewidths = 2,
+                hold='on')
 title('Filled contours')
 #colorbar()
 hot()
@@ -62,7 +62,8 @@ subplot(2,2,2)
 
 imshow(Z, extent=extent)
 v = axis()
-contour(Z, levels, hold='on', colors = 'k', origin='upper', extent=extent)
+contour(Z, cset3.levels, hold='on', colors = 'k',
+        origin='upper', extent=extent)
 axis(v)
 title("Image, origin 'upper'")
 
@@ -70,7 +71,8 @@ subplot(2,2,3)
 
 imshow(Z, origin='lower', extent=extent)
 v = axis()
-contour(Z, levels, hold='on', colors = 'k', origin='lower', extent=extent)
+contour(Z, cset3.levels, hold='on', colors = 'k',
+        origin='lower', extent=extent)
 axis(v)
 title("Image, origin 'lower'")
 
@@ -84,7 +86,8 @@ subplot(2,2,4)
 # domain that is contoured does not extend beyond these pixel centers.
 imshow(Z, interpolation='nearest', extent=extent)
 v = axis()
-contour(Z, levels, hold='on', colors = 'k', origin='image', extent=extent)
+contour(Z, cset3.levels, hold='on', colors = 'k',
+        origin='image', extent=extent)
 axis(v)
 ylim = get(gca(), 'ylim')
 setp(gca(), ylim=ylim[::-1])
